# seo

./: .env.example  .gitignore  BORROW.md  CODE_REVIEW.md  DIRECTORY_STRUCTURE.md  PROJECT_KNOWLEDGE.md  README.md  SEO_ACCURACY.html  SEO_ENHANCEMENTS_IMPL.md  SEO_TRACKING_GUIDE.md  address.yaml  async_crawl.py  backfill_psi.py  crawl.py  crawl.sh  discover_api.py  example.py  find_openapi.py  generate_lighthouse_html.py  generate_report.py  hidden.sh  package-lock.json  pyproject.toml  regenerate_recommendations.py  regenerate_report.py  report.sh  resume.sh  run.sh  run.txt  scripts.py  seo-info.txt  spectrum_config_test.py  test_charts.html  test_spectrum.py  test_spectrum.sh
config/: thresholds.example.json
docs/: CHART_DEBUGGING_GUIDE.md  CLAUDE_CHANGE_LOG.md  COMMANDS.md  EPIC1_COMPLETION_SUMMARY.md  EPIC2_COMPLETION_SUMMARY.md  EPIC3_COMPLETION_SUMMARY.md  EPIC_9-12_CLARIFICATIONS.md  EVIDENCE.md  EVIDENCE_CAPTURE_IMPL.md  GEMINI_REVIEW_LOG.md  IMPLEMENTATION_SUMMARY.md  IMPL_EVIDENCE_CAPTURE.md  IMPROVEMENTS.md  NE-FE-TEMPLATE.md  OUTPUT_EXAMPLES.md  QUICK_START.md  SEO_ENHANCEMENTS.md  SPA_REQUIREMENTS_REFINED.md  SPECTRUM_BORROW_LOG.md  TURSO-LOCAL.md  USAGE.md  epic1.json  epic1_feature1.json  epic1_feature1_story1.json  epic1_feature1_story2.json  epic1_feature1_story3.json  epic1_feature1_story4.json  epic1_feature2.json  epic1_feature2_story1.json  epic1_feature2_story2.json  epic1_feature2_story3.json  epic1_feature2_story4.json  epic1_feature2_story5.json  epic1_feature3.json  epic1_feature3_story1.json  epic1_feature3_story2.json  (+3 more)
tests/: __init__.py  (+13 more)
(+86 files in other folders)
